feat(workflow): persistir valor en etapas de control y validacion